--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 *.dll
 *.so
 *.dylib
+*.tar
+*.gz
+meta-*.json
 
 # Test binary, built with `go test -c`
 *.test
@@ -19,6 +22,7 @@ profile.cov
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+pacm1/
 
 # Go workspace file
 go.work
@@ -26,7 +30,8 @@ go.work.sum
 
 # env file
 .env
+.tmp/
 
 # Editor/IDE
 # .idea/
-# .vscode/
+.vscode/
